	  and updated to build SQLite 3.4.1. In order to for a rebuild of the
	  updated library, do: rm -rf /opt/db-4.2-lean /opt/sqlite-3-lean
	  and re-run the script.

	* The recommended minimum sqlite3 version is now 3.4.0, bogofilter will
	  warn if used with older versions. Bugs that could cause database
	  corruption in rare circumstances have been fixed in sqlite3.

	2007-02-25

	* Add '--spam-header-place={header}' to specify header line
	  before which the X-Bogosity line is placed.

	2007-02-14

	* Support --db-verify for sqlite3.

	* Fix defect where the database verification method would not be called
	  for traditional Berkeley DB databases. Reported by Eric Wood.

	2007-01-28

	* Fix test suite for situations where there are blanks in the test or
	  working directories' names.

	* Repair passthrough defect on systems whose standard system library
	  makes a distinction between text and binary mode in stdio stuff.

1.1.5	2007-01-14 (released) 2007-01-25 (declared stable)

	* Fixed Makefile dependency problem.
	  (reported by Andras Salamon)
	  This took several iterations to get right.

	2007-01-11

	* Fixed block-on-subnets problem.
	  (thanks to Jack Bailey)

	2007-01-10
	* Added block-on-subnets regression test.

1.1.4	2007-01-01 (released)

	* Update copyright notices.

	2006-12-08

	* Add GSL dependency to bogofilter target to support parallel
	  makes.
	  (reported by Martin von Gagern)

	2006-12-05

	* Fixed problem in flex-2.5.4 patch.
	  (reported by Boris 'pi' Piwinger)

1.1.3	2006-12-03 (released) 2006-12-20 (declared stable)

	* Fixed typo in configure.ac.
	  (reported by Boris 'pi' Piwinger and Torsten Veller)

1.1.2	2006-12-02 (released)

	2006-12-01

	* Revise install-staticlibs.sh's links for retrieving database
	  tarball and patches.
	* Revise make rules for generating statically linked RPM.

	2006-11-29

	* Provide separate flex patches for 2.5.4 and 2.5.3x

	2006-11-26

	* Updated file comment for lexer_v3.l and removed unneeded